# JellyEngine

./: .gitignore  LICENSE  README.md
Source/: JellyEngine.sln
Source/JellyAssembly/: JellyAssembly.csproj  NativeHelperName.cs
Source/JellyAssembly/GLFW/: Enums.cs  GLFW.cs  GLFWCallbacks.cs  GLFWContext.cs  GLFWInput.cs  GLFWMonitor.cs  GLFWWindow.cs  GLFWvidmode.cs
Source/JellyAssembly/OpenGL/: Enums.cs  GL.cs  GLAttachingRenderbufferImages.cs  GLAttachingTextureImages.cs  GLBindingManaging.cs  GLBlending.cs  GLBufferObjects.cs  GLControllingViewport.cs  (+22 more)
Source/JellyEngine/: AABB.cs  BoxCollider.cs  Camera.cs  CameraSystem.cs  CanvasRenderer.cs  CanvasRendererSystem.cs  CharacterController.cs  Collider.cs  Color.cs  Curve.cs  CurveKey.cs  DirectionalLight.cs  Display.cs  Entity.cs  EntityManager.cs  FastNoiseLite.cs  Framebuffer.cs  GameApplication.cs  GameComponent.cs  GameSystem.cs  GameTime.cs  Hierarchy.cs  Image.cs  JellyEngine.csproj  Material.cs  MathUtils.cs  Mesh.cs  MeshAsset.cs  MeshProcessor.cs  MeshRenderer.cs  MeshRendererSystem.cs  MeshType.cs  NarrowPhaseCallbacks.cs  NativeWindowSettings.cs  Noise.cs  OBJParser.cs  Physics.cs  PhysicsBody.cs  PhysicsSystem.cs  PoseIntegratorCallbacks.cs  (+22 more)
Source/JellyGame/: EntryScene.cs  GameManager.cs  GameSettings.cs  JellyGame.csproj  ScriptTest.cs
Source/Runtime/: Program.cs  Runtime.csproj
src/: CMakeLists.txt  Jelly.sln
src/Jelly/: CMakeLists.txt
src/Jelly.Assembly/: Jelly.Assembly.csproj  JellyNative.cs  JellyNativeEngine.cs  JellyNativeLogger.cs  NativeDelegates.cs
src/Jelly.Engine/: Jelly.Engine.csproj  JellyApplication.cs  LogLevel.cs  Logger.cs  WindowSettings.cs
src/Jelly.Runtime/: Jelly.Runtime.csproj  Program.cs
src/Jelly/api/: JellyEngineAPI.cpp  JellyEngineAPI.h  JellyTypes.h  LoggerAPI.cpp  LoggerAPI.h
src/Jelly/include/: JellyEngine.h  JellyExport.h  Logger.h
src/Jelly/include/Graphics/: GraphicsAPIFactory.h  GraphicsAPIType.h  GraphicsApiException.h  IGraphicsAPI.h  VulkanGraphicsAPI.h
src/Jelly/include/Graphics/Vulkan/: QueueFamilyIndices.h  SwapChainSupportDetails.h  VulkanGraphicsAPI.h
src/Jelly/include/Window/: GLFWindowSystem.h  INativeWindowHandleProvider.h  IWindowSystem.h  WindowSettings.h
src/Jelly/src/: JellyEngine.cpp  Logger.cpp
src/Jelly/src/Graphics/Vulkan/: VulkanGraphicsAPI.cpp  VulkanGraphicsAPIHelpers.cpp
src/Jelly/src/Window/: GLFWindowSystem.cpp
(+66 files in other folders)
